--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ li {
     color: white;
     text-indent: 20px;
     text-align: justify;
+    margin-right: 20px;
 }
 
 .header h1 {
@@ -149,6 +150,8 @@ li {
     font-weight: 100;
     color: white;
     text-indent: 20px;
+    text-align: justify;
+    margin-right: 20px;
 }
 
 /* body 1 */
