--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ li {
     font-size: 15px;
     font-weight: 50;
     color: white;
-    text-indent: 20px;
+    margin-left: 20px;
     text-align: justify;
     margin-right: 20px;
 }
@@ -149,7 +149,7 @@ li {
     font-size: 26px;
     font-weight: 100;
     color: white;
-    text-indent: 20px;
+    margin-left: 20px;
     text-align: justify;
     margin-right: 20px;
 }
