--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    background: rgb(65,67,69);
+    background: linear-gradient(90deg, rgba(65,67,69,1) 0%, rgba(65,67,69,1) 31%, rgba(35,37,38,1) 100%);
     overflow-y: hidden;
     transition: 0.5s;
   }
