--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
     background: rgb(65,67,69);
@@ -49,13 +53,13 @@ body {
     padding: 8px;
     text-decoration: none;
     font-size: 36px;
-    color: #818181;
+    color: white;
     display: block;
     transition: 0.3s;
   }
   
   .overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
+    color: gray;
   }
   
   .overlay .closebtn {
@@ -104,6 +108,7 @@ body {
     border: 1px solid gray;
     border-radius: 40px 40px;
     cursor: pointer;
+    transition: .5s;
 }
 
 li {
@@ -130,20 +135,6 @@ li {
     margin-left: 20px;
     text-align: justify;
     margin-right: 20px;
-}
-
-/* body 1 */
-
-.img1 img {
-    width: 330px;
-    height: 330px;
-    margin: 10px;
-    border-radius: 5px;
-}
-
-.img1 img:hover {
-    opacity: 50%;
-    transition-duration: 200ms;
 }
 
 /* intro */
@@ -197,41 +188,21 @@ li {
     border-radius: 5px;
 }
 
-/* hover image */
+/* Zoom Image */
 
-.overlay2 {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 330px;
+.zoom {
+    padding: 5px;
+    background-color: transparent;
+    transition: transform .5s;
     width: 330px;
-    opacity: 0;
-    transition: .5s ease;
-    border-radius: 5px;
+    height: 330px;
+    margin: 10px;
+    border-radius: 10px;
   }
   
-  .container2:hover .overlay2 {
-    margin-top: 10px;
-    margin-left: 10px;
-    opacity: 75%;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
-  }
-  
-  .text {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-
-  .container2 {
-    position: relative;
+  .zoom:hover {
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1);
+    border-radius: 10px;
   }
