--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ li {
 /* header 2 */
 
 .header p {
-    margin-top: 120px;
+    margin-top: 80px;
     font-size: 15px;
     font-weight: 50;
     color: white;
@@ -130,7 +130,7 @@ li {
 
 .header h1 {
     font-size: 26px;
-    font-weight: 100;
+    font-weight: bold;
     color: white;
     margin-left: 20px;
     text-align: justify;
@@ -182,7 +182,12 @@ li {
     text-align: center; 
     margin-left: 20px; 
     margin-right: 20px;
-    font-weight: 900
+    font-weight: 50;
+}
+
+.footer h2 {
+    color: white;
+    font-weight: bold;
 }
 
 .img3 img {
@@ -285,5 +290,6 @@ li {
     color: white;
     margin-top: 50px;
     margin-bottom: 20px;
+    font-size: 24px;
     font-weight: bold;
 }
