--- a/style.css
+++ b/style.css
@@ -124,7 +124,6 @@ li {
     font-weight: 50;
     color: white;
     margin-left: 20px;
-    text-align: justify;
     margin-right: 20px;
 }
 
@@ -134,7 +133,6 @@ li {
     font-weight: bold;
     color: white;
     margin-left: 20px;
-    text-align: justify;
     word-spacing:-2px;
     margin-right: 20px;
 }
@@ -226,7 +224,6 @@ li {
     font-weight: 50;
     color: white;
     margin-left: 20px;
-    text-align: justify;
     margin-right: 20px;
 }
 
@@ -235,7 +232,6 @@ li {
     font-weight: bold;
     color: white;
     margin-left: 20px;
-    text-align: justify;
     word-spacing:-2px;
     margin-right: 20px;
 }
@@ -288,11 +284,10 @@ li {
 
 
 .header-case h1 {
-    font-size: 40px;
+    font-size: 35px;
     font-weight: bold;
     color: white;
     margin-left: 20px;
-    text-align: justify;
     word-spacing:-2px;
     margin-right: 20px;
 }
@@ -312,6 +307,7 @@ li {
 .img1 h1{
     color: white;
     font-size: 20px;
+    font-weight: bold;
 }
 
 .img1 a {
@@ -323,4 +319,15 @@ li {
 
 .case-button {
     margin-top: 30px;
+}
+
+/* case header full */
+
+.header-full{
+    margin-bottom: 50px;
+}
+
+.header-full img {
+    width: 90%;
+    height: 90%;
 }
