--- a/style.css
+++ b/style.css
@@ -331,3 +331,28 @@ li {
     width: 80%;
     height: 80%;
 }
+
+/* slide down */
+
+@-webkit-keyframes slide {
+    0%   { transform: translate(0px,100px); }
+    100% { transform: translate(0px,0px); }
+  }
+  @-moz-keyframes slide {
+    0%   { transform: translate(0px,100px); }
+    100% { transform: translate(0px,0px); }
+  }
+  @-o-keyframes slide {
+    0%   { transform: translate(0px,100px); }
+    100% { transform: translate(0px,0px); }
+  }
+  @keyframes slide {
+    0%   { transform: translate(0px,100px); }
+    100% { transform: translate(0px,0px); }
+  }
+  
+  .slide {
+    animation-name: slide;
+    animation-duration: 1.5s; 
+  }
+  
