--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 
 .overlay-content {
   position: relative;
-  top: 25%;
+  top: 15%;
   width: 100%;
   text-align: center;
   margin-top: 30px;
@@ -553,4 +553,32 @@ header {
   100% {
     opacity: 1;
   }
+}
+
+/* hr */
+
+hr {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+/* design */
+
+.design {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.design-img {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.design-img img {
+  width: 60px;
+  height: 60px;
+}
+
+.see-more:hover {
+  opacity: 25%;
 }
