--- a/style.css
+++ b/style.css
@@ -8,30 +8,24 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-  background: rgb(65, 67, 69);
-  background: linear-gradient(
-    90deg,
-    rgba(65, 67, 69, 1) 0%,
-    rgba(65, 67, 69, 1) 31%,
-    rgba(35, 37, 38, 1) 100%
-  );
+  background-color: #000000;
+  margin-bottom: 25px;
 }
 
 /* header 1 */
 
 .author-name a {
-  margin-top: 15px;
   margin-left: 5px;
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 700;
   color: white;
   text-decoration: none;
 }
 
 .logo img {
-  height: 25px;
-  width: 20px;
-  margin-top: 15px;
+  height: 40px;
+  width: 40px;
+  margin-top: 25px;
   margin-left: 20px;
 }
 
@@ -42,13 +36,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background: rgb(65, 67, 69);
-  background: linear-gradient(
-    90deg,
-    rgba(65, 67, 69, 1) 0%,
-    rgba(65, 67, 69, 1) 31%,
-    rgba(35, 37, 38, 1) 100%
-  );
+  background-color: #000000;
   overflow-y: hidden;
   transition: 0.5s;
 }
@@ -85,9 +73,11 @@ body {
   .overlay {
     overflow-y: auto;
   }
+
   .overlay a {
     font-size: 20px;
   }
+
   .overlay .closebtn {
     font-size: 40px;
     top: 15px;
@@ -97,29 +87,21 @@ body {
 
 .menu {
   float: right;
-  margin-top: 15px;
-  margin-right: 15px;
+  margin-top: 25px;
+  margin-right: 20px;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 5px;
-  padding-bottom: 5px;
-  font-size: 20px;
+  padding-bottom: 8px;
+  font-size: 24px;
   font-weight: 50;
   color: white;
   border: 1px solid white;
   border-radius: 40px 40px;
   cursor: pointer;
 }
+
 .menu:hover {
-  float: right;
-  margin-top: 15px;
-  margin-right: 15px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  font-size: 20px;
-  font-weight: 50;
   color: gray;
   border: 1px solid gray;
   border-radius: 40px 40px;
@@ -135,7 +117,7 @@ li {
 /* header 2 */
 
 .header p {
-  margin-top: 80px;
+  margin-top: 20px;
   font-size: 15px;
   font-weight: 50;
   color: white;
@@ -216,6 +198,10 @@ li {
   border-radius: 5px;
 }
 
+.img3 a:hover {
+  opacity: 50%;
+}
+
 /* Zoom Image */
 
 .zoom {
@@ -229,8 +215,10 @@ li {
 }
 
 .zoom:hover {
-  -ms-transform: scale(1.1); /* IE 9 */
-  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  -ms-transform: scale(1.1);
+  /* IE 9 */
+  -webkit-transform: scale(1.1);
+  /* Safari 3-8 */
   transform: scale(1.1);
   border-radius: 10px;
 }
@@ -258,27 +246,25 @@ li {
 /* button gradient */
 
 .btn-grad {
-  background-image: linear-gradient(
-    to right,
-    rgb(58, 58, 58) 0%,
-    gray 51%,
-    rgb(58, 58, 58) 100%
-  );
+  background-image: linear-gradient(to right,
+      #CC00FF 0%,
+      #c79bff 51%,
+      #8321FF 100%);
   margin: 10px;
-  padding: 15px 45px;
+  padding: 20px 30px;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
   background-size: 200% auto;
   color: white;
-  border-radius: 10px;
+  border-radius: 100px;
   display: block;
-  border-color: white;
-  border-width: 1px;
+  font-size: small;
 }
 
 .btn-grad:hover {
-  background-position: right center; /* change the direction of the change here */
+  background-position: right center;
+  /* change the direction of the change here */
   color: white;
   text-decoration: none;
 }
@@ -363,30 +349,37 @@ li {
   0% {
     transform: translate(0px, 100px);
   }
+
   100% {
     transform: translate(0px, 0px);
   }
 }
+
 @-moz-keyframes slide {
   0% {
     transform: translate(0px, 100px);
   }
+
   100% {
     transform: translate(0px, 0px);
   }
 }
+
 @-o-keyframes slide {
   0% {
     transform: translate(0px, 100px);
   }
+
   100% {
     transform: translate(0px, 0px);
   }
 }
+
 @keyframes slide {
   0% {
     transform: translate(0px, 100px);
   }
+
   100% {
     transform: translate(0px, 0px);
   }
@@ -440,12 +433,15 @@ header {
 .scroll-container:nth-of-type(1) {
   background-color: transparent;
 }
+
 .scroll-container:nth-of-type(2) {
   background-color: transparent;
 }
+
 .scroll-container:nth-of-type(3) {
   background-color: transparent;
 }
+
 .scroll-container:nth-of-type(4) {
   background-color: transparent;
 }
@@ -471,6 +467,7 @@ header {
 }
 
 @media screen and (max-width: 650px) {
+
   .scroll-container,
   .scroll-container:nth-of-type(even) {
     flex-direction: column;
@@ -486,6 +483,7 @@ header {
     width: 100%;
   }
 }
+
 /**Styling scrollable elements*/
 
 .js-scroll {
@@ -519,6 +517,7 @@ header {
     transform: translateX(-100px);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translateX(0);
     transform: translateX(0);
@@ -532,6 +531,7 @@ header {
     transform: translateX(100px);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translateX(0);
     transform: translateX(0);
@@ -545,6 +545,7 @@ header {
     transform: translateY(50px);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translateY(0);
     transform: translateY(0);
@@ -556,6 +557,7 @@ header {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -586,29 +588,4 @@ hr {
 
 .see-more:hover {
   opacity: 25%;
-}
-
-/* text gradient */
-
-.linear-wipe {
-  background: linear-gradient(
-    to right,
-    rgb(255, 255, 255) 20%,
-    rgb(69, 69, 69) 50%,
-    rgb(122, 122, 122) 80%,
-    rgb(129, 129, 129) 100%
-  );
-  background-size: 200% auto;
-
-  color: #000;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-
-  animation: shine 1s linear infinite;
-  @keyframes shine {
-    to {
-      background-position: 200% center;
-    }
-  }
 }
