--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ li {
   padding: 5px;
   background-color: transparent;
   transition: transform 0.5s;
-  width: 500px;
+  width: 100%;
   height: 350px;
   margin: 10px;
   border-radius: 10px;
