--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ li {
   background-color: transparent;
   transition: transform 0.5s;
   width: 100%;
-  height: 350px;
+  height: 100%;
   margin: 10px;
   border-radius: 10px;
 }
