--- a/style.css
+++ b/style.css
@@ -208,8 +208,8 @@ li {
   padding: 5px;
   background-color: transparent;
   transition: transform 0.5s;
-  width: 100%;
-  height: 100%;
+  width: 330px;
+  height: 250px;
   margin: 10px;
   border-radius: 10px;
 }
