--- a/style.css
+++ b/style.css
@@ -208,8 +208,8 @@ li {
   padding: 5px;
   background-color: transparent;
   transition: transform 0.5s;
-  max-width: 500px;
-  max-height: auto;
+  width: 450px;
+  height: auto;
   min-width: 330px;
   min-height: auto;
   margin: 10px;
