--- a/style.css
+++ b/style.css
@@ -155,6 +155,14 @@ li {
     margin-bottom: 20px;
     float: left;
   }
+
+  .header span.gradient-text {
+    background: -webkit-linear-gradient(#ff00cc, #333399);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 60px;
+    font-weight: bold
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -186,6 +194,14 @@ li {
     margin-right: 10px;
     margin-bottom: 20px;
     float: none;
+  }
+
+  .header span.gradient-text {
+    background: -webkit-linear-gradient(#ff00cc, #333399);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 40px;
+    font-weight: bold
   }
 }
 
@@ -639,14 +655,6 @@ hr {
 
 .see-more:hover {
   opacity: 25%;
-}
-
-span.gradient-text {
-  background: -webkit-linear-gradient(#ff00cc, #333399);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 60px;
-  font-weight: bold
 }
 
 span.gradient-text2 {
