--- a/style.css
+++ b/style.css
@@ -686,8 +686,8 @@ li.card2 {
   border-radius: 1em;
   border: 1px solid transparent;
   padding: 30px;
-  width: 1024px;
-  min-height: fit-content;
+  width: 400px;
+  height: 400px;
   margin-top: 40px;
   margin-bottom: 40px;
   margin-left: 20px;
